/*
 * Copyright (C) 2019 Sylvain Afchain
 *
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *  http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 *
 */

syntax = "proto3";

package types;

option go_package = "github.com/safchain/koa/api/types";

message ProcMallocEntry {
    string Type = 1;
    int64 PID = 2;
    string ProcessName = 3;
    int64 RunID = 4;
    string Tag = 5;
    int64 Timestamp = 6;

    int64 Bytes = 100;
}

message ProcIOEntry {
    string Type = 1;
    int64 PID = 2;
    string ProcessName = 3;
    int64 RunID = 4;
    string Tag = 5;
    int64 Timestamp = 6;

    string Device = 100;
    int64 RIO = 101;
    int64 RBytes = 102;
    int64 WIO = 103;
    int64 WBytes = 104;
}

message ProcFncEntry {
    string Type = 1;
    int64 PID = 2;
    string ProcessName = 3;
    int64 RunID = 4;
    string Tag = 5;
    int64 Timestamp = 6;

    string FuncName = 100;
    int64 Calls = 101;
}

message ProcCPUEntry {
    string Type = 1;
    int64 PID = 2;
    string ProcessName = 3;
    int64 RunID = 4;
    string Tag = 5;
    int64 Timestamp = 6;

    int64 Nanoseconds = 100;
}

message ProcVFSEntry {
    string Type = 1;
    int64 PID = 2;
    string ProcessName = 3;
    int64 RunID = 4;
    string Tag = 5;
    int64 Timestamp = 6;

    int64 read = 100;
    int64 write = 101;
    int64 open = 102;
    int64 create = 103;
    int64 fsync = 104;
}